代替字幕入力欄表示ボタンを追加

--- a/SpeechCast/FormMain.resx
+++ b/SpeechCast/FormMain.resx
@@ -400,6 +400,18 @@
         e+CI9Z9XcS07OxngBVmmskuxEP7IAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="toolStripButtonOpenResCaptionForm.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAFRSURBVFhH7ZXbkcMgDEVdFwVRD9XQDMVoJRM2eoAt5Mn+
+        bM6M8sA2XK6EfHz5FAANWgN4/Y0BrUDCL/p5pIJT2glbSf36GRkq3gP4mV9jGQfovhBQM5s8QZnsyAp4
+        Lz4i4YP4vU/NfKK+u/MCY+5Ag5L4swER3MYz0MvzgmImgMatiLmDS6T961yuBAy6i5uLEx77CSkgsNAM
+        Uf0UC/sJ7dRlLE6SQe6+70qOBcMjwOz+LwXMjs+ugPCZJ2RBjbguLO9xvWVdTHcClGveQtPY3I+4FkB4
+        j+wlfCc5378DODp14RcQpYGKSKbjXoBO36NCJLYF6PRF62CwLcAcX/lMq3VP0K4AQvcJnoZ3jfjmCgnQ
+        dTDSoN1xFWhIgElDX0w2qg86QNhOij2Bz+UtzqiAmQsivG06KoB40lF/eSKAmIrYeUk9FTAYQsKt+cs/
+        4Dh+AHG0lBnxUOWaAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="toolStripButtonCaptionAutoSmall.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
